<resources>
    <string name="app_name">BWA Mov</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desn">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desn">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desn">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang\nM Shahib Arkan</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="cooming_soon">Coming Soon</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="dateandtime">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="simpan_data">Simpan Data Baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_history">My History</string>
    <string name="items">Items</string>
    <string name="seat_no_c1">Seat No. C1</string>
    <string name="seat_no_c2">Seat No. C2</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_harus_dibayar">Total Harus Dibayar</string>
    <string name="ewallet">E-Wallet</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="daftar_akun_baru">DAFTAR AKUN BARU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>